fix column-gap

--- a/components/main/Rules/Rules.module.scss
+++ b/components/main/Rules/Rules.module.scss
@@ -14,6 +14,7 @@
     grid-template-areas:
         'title subtitle'
         'title button';
+    column-gap: 30px;
 
     align-items: center;
 
